--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-allapps-dropdown",
-  "version": "1.2.4",
-  "description": "A React component for an All Apps dropdown menu with Tailwind CSS",
+  "name": "website-templates",
+  "version": "1.0.1",
+  "description": "A React component for an Website Templates styled with Tailwind CSS",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
