--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
     "@tanstack/react-query": "^5.68.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@tanstack/react-query-devtools": "^5.65.1",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
