--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "website-templates",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "A React component for an Website Templates styled with Tailwind CSS",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -20,9 +20,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
-    "@tanstack/react-query": "^5.68.0",
     "@radix-ui/react-slot": "^1.1.1",
-    "@tanstack/react-query-devtools": "^5.65.1",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "lucide-react": "^0.474.0",
@@ -55,11 +53,11 @@
     "typescript": "^4.7.3"
   },
   "keywords": [
-    "react",
-    "dropdown",
-    "tailwindcss",
-    "allapps"
+    "dream",
+    "website",
+    "templates",
+    "tailwindcss"
   ],
-  "author": "Abdulla al mamun",
+  "author": "Saleh Shakib",
   "license": "ISC"
 }
