--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "build": "rollup -c",
     "test": "jest",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "commit": "cz"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
@@ -35,11 +36,16 @@
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-replace": "^6.0.2",
     "@rollup/plugin-typescript": "^8.3.2",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^12.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.0.0",
     "@types/next": "^8.0.7",
     "@types/react": "^18.0.0",
     "autoprefixer": "^10.4.14",
+    "commitizen": "^4.3.1",
+    "cz-conventional-changelog": "^3.3.0",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.0.0",
     "jwt-decode": "^4.0.0",
@@ -49,6 +55,7 @@
     "rollup": "^2.75.5",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
+    "semantic-release": "^24.2.4",
     "tailwindcss": "^3.3.2",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "^4.7.3"
@@ -60,5 +67,10 @@
     "tailwindcss"
   ],
   "author": "Saleh Shakib",
-  "license": "ISC"
+  "license": "ISC",
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
