--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "tailwind-merge": "^1.13.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-replace": "^6.0.2",
@@ -44,8 +46,7 @@
     "@types/next": "^8.0.7",
     "@types/react": "^18.0.0",
     "autoprefixer": "^10.4.14",
-    "commitizen": "^4.3.1",
-    "cz-conventional-changelog": "^3.3.0",
+    "husky": "^9.1.7",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.0.0",
     "jwt-decode": "^4.0.0",
@@ -67,10 +68,5 @@
     "tailwindcss"
   ],
   "author": "Saleh Shakib",
-  "license": "ISC",
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
-  }
+  "license": "ISC"
 }
