chore: update release workflow and configuration for semantic-release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,9 +4,6 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
   release:
@@ -19,6 +16,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # Ensure full history is available for semantic-release
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -29,11 +28,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      #   - name: Run tests
-      #     run: npm test
-
       - name: Run semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }} # Ensure this secret is set in your repository settings
         run: npx semantic-release
