--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "framer-motion": "^11.18.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.474.0",
     "metal-price-live": "^0.3.3",
     "next": "^15.3.2",
@@ -43,6 +44,7 @@
     "@semantic-release/npm": "^12.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.0.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/next": "^8.0.7",
     "@types/react": "^18.0.0",
     "autoprefixer": "^10.4.14",
