--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "rollup -c",
     "test": "jest",
     "prepublishOnly": "npm run build",
-    "commit": "cz"
+    "commit": "cz",
+    "prepare": "husky"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
