--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "build": "rollup -c",
     "test": "jest",
     "prepublishOnly": "npm run build",
-    "commit": "cz",
-    "prepare": "husky"
+    "commit": "cz"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
@@ -49,10 +48,12 @@
     "@types/next": "^8.0.7",
     "@types/react": "^18.0.0",
     "autoprefixer": "^10.4.14",
+    "eslint": "^9.27.0",
     "husky": "^9.1.7",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.0.0",
     "jwt-decode": "^4.0.0",
+    "lint-staged": "^15.5.2",
     "postcss": "^8.4.24",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
