--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "outDir": "dist",
     "rootDir": "src"
   },
-  "include": ["src"],
+  "include": ["src", "src/types"],
   "exclude": ["node_modules", "dist"]
 }
